Fix spacing of components

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -2,7 +2,7 @@
 @import '/src/assets/scss/mixins';
 
 .about_container {
-  height: 100vh;
+  margin: 20vh 0;
   z-index: 99;
   display: flex;
   flex-direction: row;
