--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -26,6 +26,7 @@
 
   .header_content {
     position: absolute;
+    margin: 0 2rem;
 
     .header_intro {
       margin-bottom: 1rem;
